# comfyui-mcp-server

./: .gitignore  .gitmodules  DOG_DATASET_ARCHITECTURE.md  README.md  SHARED_WORKSPACE.md  TEST_RESULTS.md  WORKFLOWS.md  justfile  pyproject.toml  pytest.ini  test_hello_world.py  test_mcp_tools.py  test_sdxl.py  test_shared_workspace.py  test_workflow_manager.py
.github/workflows/: publish-container.yml
blender_addon/: README.md
blender_addon/comfyui_mcp/: __init__.py  operators.py  panels.py  utils.py
blender_addon/comfyui_mcp/mcp_client/: __init__.py
src/: .env  mcp_logger.py  server.py  workflow_manager.py  workflow_tools.py
src/client/: comfyui.py
tests/integration/: test_comfyui_integration.py
tests/unit/: test_comfyui_client.py  test_server.py
workflows/: hello_world.json  landmark_preview.json  text_to_image_sdxl.json
